# A.C.I.D

./: .dockerignore  .env.example  .gitignore  DockerFile  Dockerfile  README.md  ROADMAP.md  auto_improver.py  automation_agent.py  docker-compose.yml  email_builder.py  gtm_engine.py  lead_generator.py  ml_feedback.py  package-lock.json  process_logos.py  train.py  watchData.py
.Jules/: palette.md  sentinel.md
.githooks/: post-commit  pre-push
.github/workflows/: auto-merge.yml  ci.yml  kyber-pr-check.yml
CSV_master/: numericFeatures.csv
ML_master/: acidModel.pkl
backend/: app.py  ingest_huggingface.py  ingest_multi.py  requirements.txt  scrape_cve.py  train_full_pipeline.py
backend/CSV_master/: finalData.csv  numericFeatures.csv
backend/ML_master/: acidModel.pkl  acidModel_hybrid.pkl  acidModel_neural.pt  acidModel_scaler.pkl
backend/data/: README.md
backend/data/clean/: binOPS.py  complex_algorithms.py  dataProcess.py  fib.py  fileLogger.py
backend/data/corrupted/: backdoor.py  creds.py  obfuscated.py  security_flaws.py
backend/misc./: scanner.py
backend/src/: cfg_extractor.py  dataPipeline_AST.py  dataPipeline_GCN.py  diff_analyzer.py  entropy_profiler.py  extractor_AST.py  language_detector.py  normalizer_AST.py  semgrep_scanner.py  test_language_detector.py  trainerModel_AST.py  trainerModel_GCN.py  trainerModel_Hybrid.py  trainerModel_Neural.py  treesitter_parser.py  vulnerability_db.py
backend/tests/: test_middleware.py
data/clean/: clean
data/corrupted/: corrupted
docs/: make_notification_setup.md
engines/: Cargo.toml
engines/agentshield/: Cargo.toml  README.md
engines/agentshield/src/: dom_merkle.rs  main.rs
engines/ai/: pyproject.toml
engines/ai/aggregator/: __init__.py  multikrum.py  server.py
engines/ai/proto/: aggregator.proto  compile.sh
engines/containerguard/: __init__.py  config.py  escape_detector.py  monitor.py  syscall_graph.py
engines/deceptinet/: __init__.py  env.py  honeypot_orchestrator.py  hypergame.py  particle_filter.py  ppo_agent.py  pyproject.toml  server.py
engines/hardware/sentinel/: Cargo.toml
engines/hardware/sentinel/src/: anomaly.rs  calibration.rs  fft.rs  main.rs  telemetry.rs
engines/kernel/ebpf/: Makefile
engines/kernel/ebpf/src/: probe.bpf.c
engines/kernel/loader/: Cargo.toml  build.rs
engines/kernel/loader/src/: hotreload.rs  main.rs  maps.rs
engines/kyber/: __init__.py  pyproject.toml  requirements.txt
engines/kyber/siamese/: __init__.py  cfg_builder.py  contrastive.py  network.py
engines/kyber/snn/: __init__.py  bootstrap.py  calibration.py  encoder.py  lif_network.py  profiler.py  telemetry.py
engines/kyber/tda/: __init__.py  manifold.py  void_detector.py
engines/memshield/: __init__.py  analyzer.py  config.py  heap_spray.py  rop_detector.py  taint_tracker.py
engines/rlshield/: __init__.py  config.py  mappo.py  mappo_agent.py  particle_filter.py  pyproject.toml  server.py  soc_env.py  soc_orchestrator.py  wazuh_connector.py
engines/ruflo/: README.md
engines/ruflo/agents/pr-reviewer/: CLAUDE.md  review.py  run.sh
engines/ruflo/soteria-mcp/: package.json
engines/ruflo/soteria-mcp/src/: env.d.ts  index.ts
engines/symbapt/: __init__.py  apt_hunter.py  config.py  kafka_consumer.py  kafka_pipeline.py  mitre_rules.py  neural_engine.py  pyproject.toml  server.py  symbolic_layer.py
frontend/: .env.example  .env.production  .gitignore  Dockerfile  GITHUB_SOURCE_CODE.md  backend-example.py  index.html  nginx.conf  package-lock.json  package.json  pnpm-lock.yaml  vercel.json  vite.config.ts
frontend/src/: App.tsx  index.css  main.tsx
frontend/src/components/: AdminProtectedRoute.tsx  AppSidebar.tsx  CodeEditor.tsx  HeroMiniDemo.tsx  Layout.tsx  ProtectedRoute.tsx  PublicNavbar.tsx  PublicRoute.tsx  TrainingTerminal.tsx
frontend/src/components/ui/: animated-glitch-text.tsx  loader.tsx  matrix-rain.tsx
frontend/src/context/: AdminContext.tsx  AuthContext.tsx  GameContext.tsx  ThemeContext.tsx
frontend/src/lib/: api.ts  posthog.ts  supabase.ts
frontend/src/pages/: About.tsx  AdminDashboard.tsx  AdminLogin.tsx  BatchScanner.tsx  Changelog.tsx  DesktopHome.tsx  Features.tsx  FeaturesPage.tsx  ForgotPassword.tsx  GithubCallback.tsx  Home.tsx  HowItWorks.tsx  KnowledgeGraph.tsx  LandingPage.tsx  Login.tsx  NeuralEngine.tsx  Scanner.tsx  Signup.tsx
frontend/src/theme/: colors.ts
frontend/src/types/: modules.d.ts
middleware/: app.py  conftest.py  scan_history.db  test_pdf.py  test_scan_result2.json  verify_cors_security.py
misc./: scrap.py
scripts/: sync_semgrep_rules.py
src/: dataPipeline_AST.py  extractor_AST.py  main.py  normalizer_AST.py  scanner.py  trainerModel_AST.py
tests/: conftest.py  test_analyze.py  test_auth.py  test_input_validation.py  test_middleware_api.py  test_misc.py
verification/: test_api_refactor.py
