[workspace]
members  = ["kernel/loader", "hardware/sentinel"]
resolver = "2"

[workspace.dependencies]
anyhow             = "1"
tokio              = { version = "1", features = ["full"] }
tracing            = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
serde              = { version = "1", features = ["derive"] }
serde_json         = "1"
clap               = { version = "4", features = ["derive"] }
