[project]
name = "deceptinet"
version = "0.1.0"
description = "Adaptive honeypot orchestrator — hypergame-theoretic DRL (PPO + belief-state particle filter)"
requires-python = ">=3.10"
dependencies = [
    "numpy>=1.24",
    "torch>=2.0",
    "flask>=3.0",
]

[project.optional-dependencies]
dev = ["pytest", "pytest-cov"]

[project.scripts]
deceptinet = "engines.deceptinet.server:main"

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.backends.legacy:build"
