[project]
name = "rlshield"
version = "0.1.0"
description = "Multi-agent MAPPO SOC response orchestrator with Wazuh integration"
requires-python = ">=3.10"
dependencies = [
    "numpy>=1.24",
    "torch>=2.0",
    "flask>=3.0",
    "requests>=2.31",
]

[project.optional-dependencies]
dev = ["pytest", "pytest-cov"]

[project.scripts]
rlshield = "engines.rlshield.server:main"

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.backends.legacy:build"
