[package]
name        = "gpu-sentinel"
version     = "0.1.0"
edition     = "2021"
description = "GPU side-channel attack detector via NVML telemetry + FFT anomaly detection"

[dependencies]
anyhow             = { workspace = true }
tokio              = { workspace = true }
tracing            = { workspace = true }
tracing-subscriber = { workspace = true }
serde              = { workspace = true }
serde_json         = { workspace = true }
clap               = { workspace = true }

nvml-wrapper = "0.10"
rustfft      = "6"
reqwest      = { version = "0.12", features = ["json"], optional = true }

[features]
default  = ["webhook"]
webhook  = ["reqwest"]
